Mantis ChangeLog

2004.08.xx  -  0.19.0xx

- 0004137: [feature] Support a simple "view" URL (vboctor)
- 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
- 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
- 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
- 0004093: [filters] Custom field values are a larger type size in view_all_bug_page (narcissus)
- 0004108: [filters] "Use Date Filters" in advanced filters (narcissus)
- 0004150: [filters] Custom field names are not localised in filters (vboctor)
- 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
- 0004083: [sponsorships] Users without email address must not be able to sponsor issues (thraxisp)
- 0004154: [bugtracker] "Product version" and "Fixed in Version" do not get updated on rename (vboctor)
- 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
- 0004175: [bugtracker] Links are not hyperlinked properly if containing '[' or ']' (vboctor)
- 0003714: [Upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
- Updated German and Brazilian Portuguese language.

2004.07.20  -  0.19.0a2

This is the second alpha release for 0.19.0a, if there is not much issues with it then rc1 will probably follow.  The main features in this release are issue relationships and simple workflow control.  Also version handling was almost re-implemented to support released vs. future versions and also allow adding a description to versions.

- 0004018: [security] Real name field allows potentially dangerous HTML (int2str)
- 0004044: [security] Cross Site Scripting Vulnerability (int2str)
- 0003969: [feature] Issue Relationships Support (masc)
- 0003984: [feature] Support definining and enforcing custom workflow (thraxisp)
- 0004057: [feature] Add "notes" for versions (VictorBoctor)