@@ -5,6 +5,7 @@ Mantis ChangeLog
 - 0004137: [feature] Support a simple "view" URL (vboctor)
 - 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
 - 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
+- 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
 - 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
 - 0004093: [filters] Custom field values are a larger type size in view_all_bug_page (narcissus)
 - 0004108: [filters] "Use Date Filters" in advanced filters (narcissus)
